fix nav z-index issue

--- a/_sass/responsive.scss
+++ b/_sass/responsive.scss
@@ -13,6 +13,7 @@
 					position: relative;
 					font-size: 100%;
 					line-height: 1;
+					z-index: 123456789;
 
 					a {
 						font-family: $sohneBold;
